arma-rs/tests/derive/fail_struct_map_transparent_multi.rs
use arma_rs::{FromArma, IntoArma};

#[derive(FromArma, IntoArma)]
#[arma(transparent)]
struct TooManyFields {
    first: String,
    second: String,
}

fn main() {}
